# apertium-eng-bcl

./: .gitignore  Makefile.am  README  apertium-eng-bcl.eng-bcl.dix  apertium-eng-bcl.eng-bcl.t1x  configure.ac  hfst-gen.py  main.py  modes.xml
test/: tests.json
